added max amount of columns

--- a/index.html
+++ b/index.html
@@ -8,24 +8,27 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
 </head>
 <body>
-      
-    <div style="background-color: blue;">hella</div>
-    <div style="background-color: red;">yo</div>
-    <div style="background-color: papayawhip;">ah</div>
-    <div style="background-color: blue;">hella</div>
-    <div style="background-color: red;">yo</div>
-    <div style="background-color: papayawhip;">ah</div>
-    <div style="background-color: blue;">hella</div>
-    <div style="background-color: red;">yo</div>
-    <div style="background-color: papayawhip;">ah</div>
-    <div style="background-color: blue;">hella</div>
-    <div style="background-color: red;">yo</div>
-    <div style="background-color: papayawhip;">ah</div>
-    <div style="background-color: blue;">hella</div>
-    <div style="background-color: red;">yo</div>
-    <div style="background-color: papayawhip;">ah</div>
-    <div style="background-color: blue;">hella</div>
 
-
+    <div class="ui container">
+        <div class="ui grid">
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
+        </div>
+    </div>
 </body>
 </html>
