grid experiment done

--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
 
     <div class="ui container">
         <div class="ui grid">
-            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
-            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
-            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
-            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
-            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
-            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
-            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
-            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
-            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
-            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
-            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
-            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
-            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
-            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
-            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
-            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
-            <div class="column"><div style="background-color: blue;" class="ui fluid button">hella</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">col</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">col</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">col</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">col</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">col</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">col</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">col</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">col</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">col</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">col</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">col</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">col</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">col</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">col</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">col</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">col</div></div>
+            <div class="column"><div style="background-color: blue;" class="ui fluid button">col</div></div>
         </div>
     </div>
 </body>
